# OrbisStudio

./: README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI_CONTRACT.md  ext4.md
profiles/hy300/: build-plan.example.json
scripts/: setup-windows.ps1
src/orbisstudio/: __init__.py  advanced_cli.py  android_config.py  avb.py  avb_chain.py  boot_cli.py  bootimg.py  bootstrap.py  cli.py  diff.py  dt_images.py  entry.py  ext4.py  extract.py  extract_cli.py  firmware_validate.py  gpt.py  lab_cli.py  logical_workspace.py  lp.py  lp_metadata.py  models.py  ota_diff.py  ota_payload.py  package.py  pipeline.py  preflight.py  properties.py  selinux_audit.py  sparse.py  super_builder.py  super_tools.py  toolchain.py  vendor_boot.py  workspace.py
tests/: test_advanced_firmware.py  test_bootimg.py  test_bootstrap.py  test_diff.py  test_entry.py  test_ext4.py  test_extract.py  test_lab_tools.py  test_logical_workspace.py  test_lp_metadata.py  test_preflight.py  test_sparse.py  test_workspace.py
