[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbisstudio"
version = "0.2.0"
description = "Android firmware engineering laboratory for HY300/H713"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PrimalSword"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
orbis = "orbisstudio.cli:main"
orbis-extract = "orbisstudio.extract_cli:main"
orbis-lab = "orbisstudio.lab_cli:main"
orbis-boot = "orbisstudio.boot_cli:main"
orbis-advanced = "orbisstudio.advanced_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
